After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 669260 - Open/Save dialog in Midori browser hangs waiting for data with libsoup ver. past 2.32.2
Open/Save dialog in Midori browser hangs waiting for data with libsoup ver. p...
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: mainloop
2.32.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
: 673596 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-02-02 17:54 UTC by tuxator
Modified: 2012-04-16 17:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gmain: block child sources when blocking the parent (1.50 KB, patch)
2012-04-11 19:22 UTC, Dan Winship
none Details | Review
gmain: block child sources when blocking the parent (3.25 KB, patch)
2012-04-13 16:16 UTC, Dan Winship
committed Details | Review
tests/mainloop: add a test for child sources (3.97 KB, patch)
2012-04-13 16:18 UTC, Dan Winship
committed Details | Review
gmain: Add a test for recursive child sources (2.41 KB, patch)
2012-04-16 15:51 UTC, Colin Walters
none Details | Review
gmain: Add a test for recursive child sources (2.46 KB, patch)
2012-04-16 17:30 UTC, Colin Walters
committed Details | Review

Description tuxator 2012-02-02 17:54:28 UTC
Way to reproduce (in midori browser):

1. Go to  
http://code.google.com/p/ossbuild/downloads/detail?name=GStreamer-WinBuilds-SDK-LGPL-x86-Beta04-0.10.7.msi&can=2&q=

2. Try to download a file by clicking link named 
 GStreamer-WinBuilds-SDK-LGPL-x86-Beta04-0.10.7.msi 

3. Instead of normal open/save dialog with mime type displayed you see grayed out dialog
 waiting for data. 

Seems to be uniform on google code, some random sites with autogenerated download links
seems to behave the same way.

From midori bugtracker: 
https://bugs.launchpad.net/midori/+bug/780133

André Stösel (ivaldi) wrote on 2011-09-15:	
Every time the dialog doesn't render, the mime type callback (webkit_web_view_mime_type_decision_cb) is called before the "SoupSocket::readable" signal ends.

Offending commit seems to be:  97bacf3057b7c45c29a6d025c67a6dd588144e05. "SoupSocket: port to GSocketConnection/GTlsConnection"

Every libsoup version past 2.32.2 is affected by this bug.
Comment 1 Dan Winship 2012-04-10 18:48:20 UTC
*** Bug 673596 has been marked as a duplicate of this bug. ***
Comment 2 Dan Winship 2012-04-11 19:21:04 UTC
It's a problem with child sources; you're running the dialog from a point that is inside the SoupSocket's GPollableSource callback. And glib is blocking that source from being able to trigger recursively, but it's not blocking that source's child GSocketSource, so that keeps triggering constantly, blocking the lower-priority redraw from being able to happen.
Comment 3 Dan Winship 2012-04-11 19:22:50 UTC
Created attachment 211872 [details] [review]
gmain: block child sources when blocking the parent

When blocking a source that has child sources, we need to consider the
children blocked as well. Otherwise they will still trigger repeatedly
in an inner loop started from the parent source's callback.
Comment 4 Colin Walters 2012-04-12 21:23:32 UTC
$ cd glib/tests/
$ git grep g_source_add_child_source
$
Comment 5 Matthias Clasen 2012-04-12 23:59:37 UTC
I agree, having tests for the child-source functionality would be very useful.
Comment 6 Dan Winship 2012-04-13 16:16:22 UTC
Created attachment 212002 [details] [review]
gmain: block child sources when blocking the parent

When blocking a source that has child sources, we need to consider the
children blocked as well. Otherwise they will still trigger repeatedly
in an inner loop started from the parent source's callback.
Comment 7 Dan Winship 2012-04-13 16:18:58 UTC
Created attachment 212003 [details] [review]
tests/mainloop: add a test for child sources

====

Note that while there were no child source tests in glib/tests, they
were getting tested before by the gio tests (via the various sources
in gio that use child sources). We just weren't testing this
particular case because it had never occurred to me.

But yes, having child-source-specific tests in glib/tests is good, and
it even pointed out a bug in my previous patch (which blocked pollfds
in child sources, but not child sources in general).
Comment 8 Landry Breuil 2012-04-16 10:27:43 UTC
Fwiw, i can confirm that the patch fixes the issue with midori. I've imported it locally as http://www.openbsd.org/cgi-bin/cvsweb/ports/devel/glib2/patches/patch-glib_gmain_c?rev=1.12
Comment 9 Colin Walters 2012-04-16 13:56:04 UTC
Review of attachment 212002 [details] [review]:

-  g_return_if_fail (!SOURCE_BLOCKED (source)); /* Source already unblocked */
+  g_return_if_fail (SOURCE_BLOCKED (source)); /* Source already unblocked */

This seems to imply the whole thing was totally broken before, right?

Your test case is really good, very well thought out.  The comment was very helpful for me to just understand how child sources are expected to work.

I just have one minor comment on it (and feel free to keep the test case as is), it seems like the test would cover a bit more if we changed the parent timeout to say 1000, to test the case where the parent fires without the child.

Would it be useful to test a full tree, i.e. sources with child sources at least some of which themselves have child sources?  Not sure if that happens in reality (I assume not), but just mentioning it.
Comment 10 Dan Winship 2012-04-16 14:21:08 UTC
(In reply to comment #9)
> Review of attachment 212002 [details] [review]:
> 
> -  g_return_if_fail (!SOURCE_BLOCKED (source)); /* Source already unblocked */
> +  g_return_if_fail (SOURCE_BLOCKED (source)); /* Source already unblocked */
> 
> This seems to imply the whole thing was totally broken before, right?

It's not as bad as it looks. SOURCE_BLOCKED() gave the right answer everywhere else, but g_main_dispatch() clears the G_HOOK_FLAG_IN_CALL flag before calling unblock_source(), so SOURCE_BLOCKED() was always FALSE there.

> it seems like the test would cover a bit more if we changed the parent
> timeout to say 1000, to test the case where the parent fires without the child.

yeah, i could do that.

> Would it be useful to test a full tree, i.e. sources with child sources at
> least some of which themselves have child sources?  Not sure if that happens in
> reality (I assume not), but just mentioning it.

It does happen. Eg, if you poll on a GTlsConnection, you get a GTlsConnectionGnutlsSource with a child GPollableSource with a child GSocketSource. (The GPollableSource is created by GSocketInputStream because GSocketSource takes a GSocketSourceFunc, but GSocketInputStream needs to expose a source with a GPollableSourceFunc instead.)
Comment 11 Colin Walters 2012-04-16 15:51:06 UTC
Created attachment 212154 [details] [review]
gmain: Add a test for recursive child sources
Comment 12 Colin Walters 2012-04-16 15:51:44 UTC
(In reply to comment #11)
> Created an attachment (id=212154) [details] [review]
> gmain: Add a test for recursive child sources

This test presently fails - I'm not sure yet whether it's me misunderstanding the expected semantics of child sources, or a bug.
Comment 13 Colin Walters 2012-04-16 15:57:23 UTC
Looks to me like g_source_list_add() doesn't handle the recursion.
Comment 14 Colin Walters 2012-04-16 16:00:18 UTC
Incidentally before I forget /mainloop/invoke is broken - its use of GCond is racy.  It needs to set a boolean protected by the GCond, not try to use GCond as a flag.
Comment 15 Dan Winship 2012-04-16 16:52:38 UTC
(In reply to comment #12)
> > gmain: Add a test for recursive child sources
> 
> This test presently fails - I'm not sure yet whether it's me misunderstanding
> the expected semantics of child sources, or a bug.

Neither. It's timeout sources being tricky. (This messed me up on the first try too.) Whenever a timeout source gets dispatched, its timer gets reset. So when child_b triggers at 220, parent's timeout gets pushed back to 720. Then child_c triggers at 430, which pushes child_b's next timeout to 650 and parent's next timeout to 930, etc.

(Of course in the real world, there's no good reason to chain timeout sources like we're doing here, so no one else will ever run into this. A more natural example would be something like having a GIOChannel source, with a GTimeoutSource child (to do an async read with a timeout). But that would have been a bunch more code, and wouldn't have exercised the child source codepaths any more.)
Comment 16 Colin Walters 2012-04-16 17:30:47 UTC
Created attachment 212159 [details] [review]
gmain: Add a test for recursive child sources
Comment 17 Colin Walters 2012-04-16 17:32:12 UTC
(In reply to comment #15)
> (In reply to comment #12)
> > > gmain: Add a test for recursive child sources
> > 
> > This test presently fails - I'm not sure yet whether it's me misunderstanding
> > the expected semantics of child sources, or a bug.
> 
> Neither. It's timeout sources being tricky. (This messed me up on the first try
> too.) Whenever a timeout source gets dispatched, its timer gets reset.

Got it.  Did the math and confirmed it matches.

(I'm interested in understanding the requirements and semantics of this code for my hopeful future of pushing mainloop subset down into glibc)

So I think we're good to go with your patches?
Comment 18 Dan Winship 2012-04-16 17:48:56 UTC
pushed to master and presumably soon to glib-2-32. walters and I are still
looking at the test_invoke() problems on IRC.